--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,14 @@
 ---
-import { Layout } from '../components/Layout'
 import '../styles/global.css'
+import { GdprBanner } from '../components/GdprBanner'
+import { Layout } from '../components/Layout'
 
 const { title, description = 'Bank.Green helps you find ethical and sustainable banks' } =
   Astro.props
+
+// Read GDPR cookie values from server-side
+const showBanner = Astro.cookies.get('bg.showbanner')?.value !== 'false'
+const allowCookies = Astro.cookies.get('bg.allowcookies')?.value === 'true'
 ---
 
 <!doctype html>
@@ -29,5 +34,6 @@ const { title, description = 'Bank.Green helps you find ethical and sustainable 
     <Layout client:load>
       <slot />
     </Layout>
+    <GdprBanner client:load showBanner={showBanner} allowCookies={allowCookies} />
   </body>
 </html>
