--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -3,6 +3,8 @@ import { BlogPostPage } from '@components/pages'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import { getAllByTypeSafe, getByUIDSafe } from '@lib/prismic'
 
+export const prerender = true
+
 export async function getStaticPaths() {
   const posts = await getAllByTypeSafe('blogpost')
   return posts.map((post) => ({ params: { slug: post.uid } }))
@@ -19,5 +21,5 @@ const title = post.data.title || 'Blog Post'
 ---
 
 <BaseLayout title={title}>
-  <BlogPostPage post={post} client:load />
+  <BlogPostPage post={post} />
 </BaseLayout>
