--- a/src/pages/disclaimer.astro
+++ b/src/pages/disclaimer.astro
@@ -3,6 +3,8 @@ import { SlicePage } from '@components/pages'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import { getSingleSafe } from '@lib/prismic'
 
+export const prerender = true
+
 const page = await getSingleSafe('disclaimerpage')
 ---
 
