--- a/src/pages/methodology.astro
+++ b/src/pages/methodology.astro
@@ -1,11 +1,13 @@
 ---
-import { SlicePage } from '@components/pages'
+import { MethodologyPage } from '@components/pages'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import { getSingleSafe } from '@lib/prismic'
+
+export const prerender = true
 
 const page = await getSingleSafe('methodology')
 ---
 
 <BaseLayout title="Ratings Methodology">
-  <SlicePage title="How Bank.Green Rates Institutions" page={page} client:load />
+  <MethodologyPage page={page} client:load />
 </BaseLayout>
