--- a/src/pages/press/[slug].astro
+++ b/src/pages/press/[slug].astro
@@ -3,6 +3,8 @@ import { PressReleasePage } from '@components/pages'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import { getAllByTypeSafe, getByUIDSafe } from '@lib/prismic'
 
+export const prerender = true
+
 export async function getStaticPaths() {
   const releases = await getAllByTypeSafe('presspost')
   return releases.map((release) => ({ params: { slug: release.uid } }))
@@ -19,5 +21,5 @@ const title = release.data.title || 'Press Release'
 ---
 
 <BaseLayout title={title}>
-  <PressReleasePage release={release} client:load />
+  <PressReleasePage release={release} />
 </BaseLayout>
