More layout fixes

--- a/src/pages/disclaimer.astro
+++ b/src/pages/disclaimer.astro
@@ -9,5 +9,5 @@ const page = await getSingleSafe('disclaimerpage')
 ---
 
 <BaseLayout title="Disclaimer">
-  <SlicePage title="Disclaimer" page={page} />
+  <SlicePage page={page} />
 </BaseLayout>
