--- a/src/pages/sustainable-eco-banks/[bankTag].astro
+++ b/src/pages/sustainable-eco-banks/[bankTag].astro
@@ -4,6 +4,8 @@ import BaseLayout from '@layouts/BaseLayout.astro'
 import { getByUIDSafe, prismicClient } from '@lib/prismic'
 import { fetchAllSustainableBankTags, fetchBrandByTag, fetchHarvestData } from '@lib/queries/brands'
 
+export const prerender = true
+
 export async function getStaticPaths() {
   const tags = await fetchAllSustainableBankTags()
   return tags.map((tag) => ({ params: { bankTag: tag } }))
