Fixing TS and linting errors

--- a/src/pages/accreditation/[slug].astro
+++ b/src/pages/accreditation/[slug].astro
@@ -21,5 +21,5 @@ const title = page.data.hero_title || 'Accreditation'
 ---
 
 <BaseLayout title={title}>
-  <SlicePage title={title} page={page} client:load />
+  <SlicePage page={page} client:load />
 </BaseLayout>
