--- a/src/pages/glossary.astro
+++ b/src/pages/glossary.astro
@@ -9,5 +9,5 @@ const page = await getSingleSafe('glossarypage')
 ---
 
 <BaseLayout title="Glossary">
-  <SlicePage title="Glossary" page={page} />
+  <SlicePage page={page} />
 </BaseLayout>
