--- a/src/pages/green-policy-evaluator.astro
+++ b/src/pages/green-policy-evaluator.astro
@@ -7,5 +7,5 @@ const page = await getSingleSafe('greenpolicyevaluatorpage')
 ---
 
 <BaseLayout title="Green Policy Evaluator">
-  <SlicePage title="Green Policy Evaluator" page={page} client:load />
+  <SlicePage page={page} client:load />
 </BaseLayout>
