--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -9,5 +9,5 @@ const page = await getSingleSafe('privacypage')
 ---
 
 <BaseLayout title="Privacy Policy">
-  <SlicePage title="Privacy Policy" page={page} />
+  <SlicePage page={page} />
 </BaseLayout>
