--- a/src/pages/donate.astro
+++ b/src/pages/donate.astro
@@ -3,6 +3,8 @@ import { DonatePage } from '@components/pages'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import { getSingleSafe } from '@lib/prismic'
 
+export const prerender = true
+
 const page = await getSingleSafe('donationpage')
 ---
 
