--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import { HomePage } from '@components/pages/HomePage'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import { getSingleSafe } from '@lib/prismic'
 
+export const prerender = true
+
 const page = await getSingleSafe('homepage')
 const title =
   page?.data?.seo_title || page?.data?.title || 'Find Ethical & Sustainable Banks In Your Area'
