--- a/src/pages/sustainable-eco-banks/index.astro
+++ b/src/pages/sustainable-eco-banks/index.astro
@@ -3,6 +3,8 @@ import { EcoBanksPage } from '@components/pages'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import { getSingleSafe } from '@lib/prismic'
 
+export const prerender = true
+
 const page = await getSingleSafe('ecobankspage', {
   fetchLinks: ['accordionitem.title', 'accordionitem.slices'],
 })
