--- a/src/pages/take-action.astro
+++ b/src/pages/take-action.astro
@@ -3,6 +3,8 @@ import { TakeActionPage } from '@components/pages'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import { getSingleSafe } from '@lib/prismic'
 
+export const prerender = true
+
 const page = await getSingleSafe('takeactionpage', {
   fetchLinks: ['accordionitem.title', 'accordionitem.slices'],
 })
